{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 569,
  "lineage": "f547a151-8a6d-49fd-64df-8384edc5c029",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:553449525156:listener/app/Telemetry-ALB-For-ECS-Service/c893b62f8fbb5df5/583ca135f4f256db",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:553449525156:targetgroup/Telemetry-ALB-For-ECS-Service/c37b0652d7034aac",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:553449525156:listener/app/Telemetry-ALB-For-ECS-Service/c893b62f8fbb5df5/583ca135f4f256db",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:553449525156:loadbalancer/app/Telemetry-ALB-For-ECS-Service/c893b62f8fbb5df5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_alb_target_group.TG-For-ECS-Service",
            "aws_lb.Telemetry-ALB-For-ECS-Service",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "TG-For-ECS-Service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:553449525156:targetgroup/Telemetry-ALB-For-ECS-Service/c37b0652d7034aac",
            "arn_suffix": "targetgroup/Telemetry-ALB-For-ECS-Service/c37b0652d7034aac",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:553449525156:targetgroup/Telemetry-ALB-For-ECS-Service/c37b0652d7034aac",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Telemetry-ALB-For-ECS-Service",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-00ed6c0cb39a96989"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Telemetry-ALB-For-ECS-Service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:553449525156:loadbalancer/app/Telemetry-ALB-For-ECS-Service/c893b62f8fbb5df5",
            "arn_suffix": "app/Telemetry-ALB-For-ECS-Service/c893b62f8fbb5df5",
            "dns_name": "Telemetry-ALB-For-ECS-Service-1829176390.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:553449525156:loadbalancer/app/Telemetry-ALB-For-ECS-Service/c893b62f8fbb5df5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Telemetry-ALB-For-ECS-Service",
            "security_groups": [
              "sg-0fe52bc1b362437e8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-013196b8af0e83152"
              },
              {
                "subnet_id": "subnet-0bbcb24b61cdd955f"
              },
              {
                "subnet_id": "subnet-0bee8c0b8465050fa"
              }
            ],
            "subnets": [
              "subnet-013196b8af0e83152",
              "subnet-0bbcb24b61cdd955f",
              "subnet-0bee8c0b8465050fa"
            ],
            "vpc_id": "vpc-00ed6c0cb39a96989",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553449525156:security-group/sg-0fe52bc1b362437e8",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe52bc1b362437e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from the Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from the Internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "owner_id": "553449525156",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default"
            },
            "tags_all": {
              "Name": "default"
            },
            "vpc_id": "vpc-00ed6c0cb39a96989"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553449525156:internet-gateway/igw-06e6ae611aef7ea6e",
            "id": "igw-06e6ae611aef7ea6e",
            "owner_id": "553449525156",
            "tags": {
              "Name": "Telemetry-VPC"
            },
            "tags_all": {
              "Name": "Telemetry-VPC"
            },
            "vpc_id": "vpc-00ed6c0cb39a96989"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06e6ae611aef7ea6e",
            "id": "r-rtb-07754fd3fc1e25bf61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07754fd3fc1e25bf6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553449525156:route-table/rtb-07754fd3fc1e25bf6",
            "id": "rtb-07754fd3fc1e25bf6",
            "owner_id": "553449525156",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e6ae611aef7ea6e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Telemetry-VPC-public"
            },
            "tags_all": {
              "Name": "Telemetry-VPC-public"
            },
            "vpc_id": "vpc-00ed6c0cb39a96989"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fc5ee342530161e",
            "route_table_id": "rtb-07754fd3fc1e25bf6",
            "subnet_id": "subnet-0bbcb24b61cdd955f"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001bb157bb2d13b94",
            "route_table_id": "rtb-07754fd3fc1e25bf6",
            "subnet_id": "subnet-0bee8c0b8465050fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a6ff8c9e330bd4a",
            "route_table_id": "rtb-07754fd3fc1e25bf6",
            "subnet_id": "subnet-013196b8af0e83152"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553449525156:subnet/subnet-0bbcb24b61cdd955f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0bbcb24b61cdd955f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "553449525156",
            "tags": {
              "Name": "Telemetry-VPC-public-eu-west-1a"
            },
            "tags_all": {
              "Name": "Telemetry-VPC-public-eu-west-1a"
            },
            "vpc_id": "vpc-00ed6c0cb39a96989"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553449525156:subnet/subnet-0bee8c0b8465050fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0bee8c0b8465050fa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "553449525156",
            "tags": {
              "Name": "Telemetry-VPC-public-eu-west-1b"
            },
            "tags_all": {
              "Name": "Telemetry-VPC-public-eu-west-1b"
            },
            "vpc_id": "vpc-00ed6c0cb39a96989"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553449525156:subnet/subnet-013196b8af0e83152",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-013196b8af0e83152",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "553449525156",
            "tags": {
              "Name": "Telemetry-VPC-public-eu-west-1c"
            },
            "tags_all": {
              "Name": "Telemetry-VPC-public-eu-west-1c"
            },
            "vpc_id": "vpc-00ed6c0cb39a96989"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553449525156:vpc/vpc-00ed6c0cb39a96989",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-079e0a553a1d040de",
            "default_route_table_id": "rtb-0154ea8d5c8207358",
            "default_security_group_id": "sg-0fe52bc1b362437e8",
            "dhcp_options_id": "dopt-88b7faee",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00ed6c0cb39a96989",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0154ea8d5c8207358",
            "owner_id": "553449525156",
            "tags": {
              "Name": "Telemetry-VPC"
            },
            "tags_all": {
              "Name": "Telemetry-VPC"
            }
          }
        }
      ]
    }
  ]
}